# voxer

./: CMakeLists.txt  README.md
VoxeR/: CMakeLists.txt
VoxeR/shaders/: fs.glsl  vs.glsl
VoxeR/src/: main.cpp
VoxeR/src/Buffer/: Buffer.cpp  Buffer.h
VoxeR/src/Shaders/: Shader.cpp  Shader.h
VoxeR/src/VertexArray/: VertexArray.cpp  VertexArray.h
VoxeR/src/Window/: Events.cpp  Window.cpp  Window.h
glad/include/glad/: glad.h
glad/src/: glad.c
